Message for when you make it to the ticket buying

--- a/lib/gimme_tix_web/templates/event/show.html.eex
+++ b/lib/gimme_tix_web/templates/event/show.html.eex
@@ -15,6 +15,7 @@
 </div>
 
 <div id='controls' hidden='hidden'>
+  <h3>Congrats! You made it to the front of the line</h3>
   <a href="#" id="buy" class="btn">Buy Ticket</a>
   <a href="#" id="pass" class="btn red">Decline Ticket</a>
 </div>
